CKA Scenarios/Scenario-1/SA-Token.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-pod
spec:
  serviceAccountName: secure-sa
  containers:
  - image: nginx
    name: secure-pod



# List the pods in the default namespace, waiting for the pod to appear as running

# list the pods in the default namespace and wait until the pod is running
bash: |

 kubectl -n default get po

 # Verify that the service account token is NOT mounted to the pod

  # get a shell to the pod and output the token (if mounted)
  kubectl exec secure-pod -- cat /var/run/secrets/kubernetes.io/serviceaccount/token
  # You should get the following, indidcating that the service account token was not mounted

  # controlplane $ kubectl exec secure-pod -- cat /var/run/secrets/kubernetes.io/serviceaccount/token
  # cat: /var/run/secrets/kubernetes.io/serviceaccount/token: No such file or directory
  # command terminated with exit code 1
