CKA Scenarios/Scenario-1/node-affinity.yaml
# In this scenario, you'll practice using node affinity in Kubernetes to control where pods are scheduled.

# Node affinity allows you to constrain which nodes a pod can be scheduled on based on node labels. There are two types:

# Required (requiredDuringSchedulingIgnoredDuringExecution ) — the pod must be placed on a matching node
# Preferred (preferredDuringSchedulingIgnoredDuringExecution ) — the scheduler tries to place the pod on a matching node, but will still schedule it elsewhere if none match

apiVersion: v1
kind: Pod
metadata:
  name: data-processor
  namespace: production
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disk
            operator: In
            values:
            - ssd  
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: zone
            operator: In
            values:
            - west
  containers:
  - name: data-processor
    image: nginx:1.25
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"

---
apiVersion: v1
kind: Pod
metadata:
  name: pod-logging
spec:
  containers:
  - name: main
    image: busybox
    args: [/bin/sh, -c, 'while true; do echo $(date); sleep 1; done']

# Create a pod that will have two containers, one main container and another sidecar container that will collect the main containers logs

# Using kubectl, view the logs from the container named "sidecar"
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-logging-sidecar
spec:
  containers:
  - image: busybox
    name: main
    args: [ 'sh', '-c', 'while true; do echo "$(date)\n" >> /var/log/main-container.log; sleep 5; done' ]
    volumeMounts:
      - name: varlog
        mountPath: /var/log
  - name: sidecar
    image: busybox
    args: [ /bin/sh, -c, 'tail -f /var/log/main-container.log' ]
    volumeMounts:
      - name: varlog
        mountPath: /var/log
  volumes:
    - name: varlog
      emptyDir: {}
